files structure/ change file structure

--- a/index.html
+++ b/index.html
@@ -76,21 +76,14 @@
 </body>
 
 
-<script src="functionsTrigo.js"></script>
+<script src="js/functionsTrigo.js"></script>
 
-<script src="graph/GraphControler.js"></script>
+<script src="scripts/masterContext.js"></script>
 
+<script src="js/classes//BasicMerger.js"></script>
+<script src="js/classes//BasicOsc.js"></script>
+<script src="js/classes/GraphControler.js"></script>
 
-<script src="audio/masterContext.js"></script>
-<script src="audio/BasicMerger.js"></script>
-<script src="audio/BasicOsc.js"></script>
-
-
-<!-- <script src="audio/basicsModules/BasicMerger.js"></script> -->
-<!-- <script src="audio/basicsModules/BasicTransport.js"></script> -->
-<!-- <script src="audio/basicsModules/BasicOsc.js"></script> -->
-<!-- <script src="audio/ControlsHandler.js"></script> -->
-<!-- <script src="audio/main.js"></script> -->
 
 <script src="main.js"></script>
 
