BasicMerger/ add remove module function, update jsdoc

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <script src="js/functionsTrigo.js"></script>
 
-<script src="scripts/masterContext.js"></script>
+<script src="js/scripts/masterContext.js"></script>
 
 <script src="js/classes//BasicMerger.js"></script>
 <script src="js/classes//BasicOsc.js"></script>
