BasicPolySynth/ create class

--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
 
 <script src="js/scripts/masterContext.js"></script>
 
-<script src="js/classes//BasicMerger.js"></script>
-<script src="js/classes//BasicOsc.js"></script>
+<script src="js/classes/BasicMerger.js"></script>
+<script src="js/classes/BasicOsc.js"></script>
+<script src="js/classes/BasicPolySynth.js"></script>
+
 <script src="js/classes/GraphControler.js"></script>
 
 
