classes GraphCircularSequencer and GraphCircularSynth. sendControls and receiveControls on the main for transmit data between controlers and generator

--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
                         <fieldset>
                             <legend>Steps</legend>
                             <input type="number" name="steps" id="inp-steps" value="12">
+                            <input type="button" id="btn-refresh"value="refresh">
                         </fieldset>
         
-                        <fieldset>
+                        <!-- <fieldset>
                             <legend>Bpm</legend>
                             <input type="number" name="bmp" id="inp-bmp" value="120">
-                        </fieldset>
+                        </fieldset> -->
                     </div>
     
                     <div class="hor-flex">
@@ -84,7 +85,9 @@
 <script src="js/classes/BasicOsc.js"></script>
 <script src="js/classes/BasicPolySynth.js"></script>
 
-<script src="js/classes/GraphControler.js"></script>
+<script src="js/classes/GraphCircularControler.js"></script>
+<script src="js/classes/GraphCircularSequencer.js"></script>
+<script src="js/classes/GraphCircularSynth.js"></script>
 
 
 <script src="main.js"></script>
