reset after git bad manip

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
     <main>
         
-        <section id="master-section" class="vert-flex">
-            <!-- master CONTROLS -->
+        <!-- <section id="master-section" class="vert-flex">
             <fieldset id="field-master" class="hor-flex">
                 <legend>Master</legend>
 
@@ -26,13 +25,20 @@
                     <input type="range" id="master-gain" min="0" max="1" step="0.01">
                 </fieldset>
             </fieldset>
-        </section>
+        </section> -->
 
         <div class="hor-flex">
             <section id="seq-section" class="vert-flex">
                 <fieldset class="vert-flex">
                     <legend>Seq</legend>
+
+                    <fieldset class="hor-flex">
+                        <input type="button" id="master-play" value="play">
+                        <input type="button" id="master-stop" value="stop">
     
+                        <input type="range" id="master-gain" min="0" max="1" step="0.01">
+                    </fieldset>
+
                     <div class="hor-flex">
                         <fieldset>
                             <legend>Steps</legend>
