--- a/index.html
+++ b/index.html
@@ -62,16 +62,19 @@
             <section id="synth-section" class="vert-flex">
                 <fieldset class="vert-flex">
                     <legend>synth</legend>
-    <!-- 
-                    <div class="hor-flex">
-                        <fieldset>
-                            <legend>Bpm</legend>
-                            <input type="number" name="bmp" id="inp-bmp" value="120">
-                        </fieldset>
-                    </div> -->
     
                     <div class="hor-flex">
                         <canvas id="canvas-synth" width="150" height="150"></canvas>
+                    </div>
+                </fieldset>
+            </section>
+
+            <section id="synth2-section" class="vert-flex">
+                <fieldset class="vert-flex">
+                    <legend>synth 2</legend>
+    
+                    <div class="hor-flex">
+                        <canvas id="canvas-synth2" width="150" height="150"></canvas>
                     </div>
                 </fieldset>
             </section>
