style/ add file style.css, add colors

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>SEQ CIRCLE</title>
 </head>
 
@@ -87,47 +88,7 @@
 <script src="main.js"></script>
 
 <style>
-    html {
-        /* background-color: #32395973; */
-    }
-    html * {
-        margin: 0;
-        padding: 0;
-        
-        /* border: 1px solid black; */
-    }
 
-    #main-section {
-        padding: 0 30px;
-        /* margin: 0 auto; */
-    }
-    fieldset {
-        margin: 2px;
-        padding: 4px;
-        border-radius: 2px;
-
-        /* background-color: #3a96993b; */
-        /* border-color: cadetblue; */
-    }
-    legend {
-        margin: 0 4px;
-        padding: 0 2px;
-    }
-    canvas {
-        /* border: 1px solid black; */
-    }
-
-    .vert-flex {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        /* max-height: fit-content; */
-    }
-    .hor-flex {
-        display: flex;
-        flex-direction: row;
-        /* max-width: fit-content; */
-    }
 </style>
 
 </html>
