synth/ add events for change nbr of voices and re init synth and controler

--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
             <div>
                 <fieldset>
                     <legend>synth 1</legend>
+
+                    <details>
+                        <summary></summary>
+                        <fieldset>
+                            <legend>nbr of voices</legend>
+                                <input type="number" name="voices" id="inp-voices-1" value="3">
+                                <input type="button" id="btn-voices-1"value="valid">
+                        </fieldset>
+                    </details>
+
                     <canvas id="canvas-synth" width="150" height="150"></canvas>
                 </fieldset>
             </div>
@@ -70,6 +80,16 @@
             <div>
                 <fieldset>
                     <legend>synth 2</legend>
+
+                    <details>
+                        <summary></summary>
+                        <fieldset>
+                            <legend>nbr of voices</legend>
+                                <input type="number" name="voices" id="inp-voices-2" value="3">
+                                <input type="button" id="btn-voices-2"value="valid">
+                        </fieldset>
+                    </details>
+
                     <canvas id="canvas-synth2" width="150" height="150"></canvas>
                 </fieldset>
             </div>
